	  thresholds
	New check_snmp "-N" option to specify SNMPv3 context name
	New check_nt "-l" parameters: seconds|minutes|hours|days
	Make sure check_disk won't hang on hanging (network) file systems
	New check_mailq -s option which tells the plugin to use sudo(8)
	New -W/-C option for check_ldap to check number of entries (Gerhard Lausser)

	FIXES
	Let check_real terminate lines with CRLF when talking to the server, as
	  mandated by 2326
	Fix check_procs on HP-UX

	WARNINGS
	The format of the performance data emitted by check_mrtgtraf has been
	  changed to comply with the development guidelines
        check_ssh not returns CRITICAL for protocal/version errors

2.1.1 2nd December 2014
	FIXES
	Fix check_ntp's jitter checking
	Fix check_ntp's handling of invalid server responses
	Fix check_apt's handling of invalid regular expressions
	Fix check_real's server response processing
	Fix backslash escaping in check_tcp's --help output

2.1 15th October 2014
	ENHANCEMENTS
	New check_hpjd -p option for port specification (abrist)
	New ./configure --with-qmail-qstat-command option to specify the path to
	  qmail-qstat(8)
	New check_ifstatus -n option to ignore interfaces by name
	check_ntp_peer has now specific state output for each metric
	New check_mysql -n option to ignore authentication failures
	Added IP and port or socket name to error messages
	New check_ntp_time -o option to add expected offset
	check_disk shows now troubled partions in verbose mode
	check_dig has now support for drill and dig
	check_dig has now support for -6 option
	Add performance data to check_file_age

	FIXES
	Fix check_jabber to work with Openfire servers
	Fix check_oracle bad string matching when testing TNS server
	Fixed check_ifstatus performance data output
        Fixed expire time output for sslutils
	check_dns now verifies if the answer is returning from the queried
	  server
	Fix check_by_ssh to accept --hostname as argument

	WARNINGS